--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # OpenAI Configuration
-OPENAI_API_KEY=sk-03af7cf475524197823fc9ce7f7edac1
+OPENAI_API_KEY=""
 
 # Gmail API Configuration (for future use)
 GMAIL_CLIENT_ID=your-gmail-client-id
